added readme to the assets

--- a/.release-it.json
+++ b/.release-it.json
@@ -6,7 +6,10 @@
 		"tagName": "${version}"
 	},
 	"github": {
-		"assets": [ "lib/*.*" ],
+		"assets": [
+			"lib/*.*",
+			"README.md"
+		],
 		"draft": true,
 		"release": true,
 		"releaseName": "v${version}"
