--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"test": "jest",
 		"build": "rollup --config",
 		"build:declarations": "tsc -p src/tsconfig.d.json",
-		"release": "release-it"
+		"release": "dotenv release-it"
 	},
 	"files": [
 		"lib/*.*"
@@ -35,6 +35,7 @@
 		"@types/node": "^13.9.1",
 		"@types/node-fetch": "^2.5.5",
 		"babel-jest": "^25.1.0",
+		"dotenv-cli": "^3.1.0",
 		"fastify": "^2.12.1",
 		"jest": "^25.1.0",
 		"jest-junit": "^10.0.0",
