--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@types/lodash": "^4.14.149",
 		"@types/node": "^13.9.1",
 		"@types/node-fetch": "^2.5.5",
+		"abort-controller": "^3.0.0",
 		"babel-jest": "^25.1.0",
 		"dotenv-cli": "^3.1.0",
 		"fastify": "^2.12.1",
