--- a/.release-it.json
+++ b/.release-it.json
@@ -18,7 +18,7 @@
 		"publish": false
 	},
 	"hooks": {
-		"before:init": [ "yarn run build", "yarn run build --es3", "yarn run build:declarations" ],
+		"before:init": [ "yarn run build", "yarn run build:es3", "yarn run build:declarations" ],
 		"after:bump": "npm run test",
 		"after:release": "echo Successfully created a release draft v${version} for ${repo.repository}. Please add release notes when necessary and publish it!"
 	}
