--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.0",
 	"description": "A strongly typed, Typescript powered, rest client library based on Fetch API.",
 	"browser": "lib/index.umd.js",
-	"module": "lib/index.esm.js",
+	"module": "lib/index.js",
 	"types": "lib/index.d.ts",
 	"scripts": {
 		"test": "jest",
