--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -40,7 +40,7 @@
 		"yzane.markdown-pdf",
 		"hbenl.vscode-test-explorer",
 		"christian-kohler.npm-intellisense",
-		"rtbenfield.vscode-jest-test-adapter",
+		"kavod-io.vscode-jest-test-adapter",
 
 		// "ms-vsliveshare.vsliveshare",
 		// "ms-vsliveshare.vsliveshare-audio",
