--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
 		"esModuleInterop": true,
 		"strict": true,
 		"resolveJsonModule": true,
+		"downlevelIteration": true,
 		"removeComments": true,
 		"lib": [ "ES2020" ]
 	},
