fixed to tar gz

--- a/.release-it.json
+++ b/.release-it.json
@@ -23,7 +23,7 @@
 		"after:init": "npm run test",
 		"after:bump": [
 			"git archive --format zip -o \"Source code.zip\" master --prefix scarlett-${version}/",
-			"git archive --format tar -o \"Source code.tar\" master --prefix scarlett-${version}/"
+			"git archive --format tar.gz -o \"Source code.tar.gz\" master --prefix scarlett-${version}/"
 		],
 		"after:release": "echo Release draft v${version} is ready to go!"
 	}
