fixed assets on github release

--- a/.release-it.json
+++ b/.release-it.json
@@ -7,9 +7,8 @@
 	},
 	"github": {
 		"assets": [
-			"lib/*.*",
-			"logo.jpg",
-			"README.md"
+			"Source code.zip",
+			"Source code.tar.gz"
 		],
 		"draft": true,
 		"release": true,
