--- a/.release-it.json
+++ b/.release-it.json
@@ -7,8 +7,8 @@
 	},
 	"github": {
 		"assets": [
-			"Source code.zip",
-			"Source code.tar.gz"
+			"Sources.zip",
+			"Sources.tar.gz"
 		],
 		"draft": true,
 		"release": true,
@@ -21,8 +21,8 @@
 		"before:init": [ "yarn run build", "yarn run build:es3", "yarn run build:declarations" ],
 		"after:init": "npm run test",
 		"after:bump": [
-			"git archive --format zip -o \"Source code.zip\" master --prefix scarlett-${version}/",
-			"git archive --format tar.gz -o \"Source code.tar.gz\" master --prefix scarlett-${version}/"
+			"git archive --format zip -o \"Sources.zip\" master --prefix scarlett-${version}/",
+			"git archive --format tar.gz -o \"Sources.tar.gz\" master --prefix scarlett-${version}/"
 		],
 		"after:release": "Release draft v${version} is ready to go!"
 	}
