--- a/.release-it.json
+++ b/.release-it.json
@@ -24,6 +24,6 @@
 			"git archive --format zip -o \"Sources.zip\" master --prefix scarlett-${version}/",
 			"git archive --format tar.gz -o \"Sources.tar.gz\" master --prefix scarlett-${version}/"
 		],
-		"after:release": "Release draft v${version} is ready to go!"
+		"after:release": "echo 'Release draft v${version} is ready to go!'"
 	}
 }
