--- a/package.json
+++ b/package.json
@@ -22,29 +22,29 @@
 		"url": "git://github.com/Micene09/scarlett.git"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.14.6",
-		"@babel/preset-env": "^7.14.7",
-		"@babel/preset-typescript": "^7.14.5",
-		"@rollup/plugin-multi-entry": "^4.0.0",
-		"@rollup/plugin-node-resolve": "^13.0.0",
-		"@rollup/plugin-typescript": "^8.2.1",
-		"@types/jest": "^26.0.24",
-		"@types/node": "^16.0.1",
-		"@types/node-fetch": "^2.5.11",
+		"@babel/core": "^7.15.8",
+		"@babel/preset-env": "^7.15.8",
+		"@babel/preset-typescript": "^7.15.0",
+		"@rollup/plugin-multi-entry": "^4.1.0",
+		"@rollup/plugin-node-resolve": "^13.0.5",
+		"@rollup/plugin-typescript": "^8.3.0",
+		"@types/jest": "^27.0.2",
+		"@types/node": "^16.11.1",
+		"@types/node-fetch": "^2.5.12",
 		"abort-controller": "^3.0.0",
-		"babel-jest": "^27.0.6",
+		"babel-jest": "^27.2.5",
 		"dotenv-cli": "^4.0.0",
-		"fastify": "^3.18.1",
-		"jest": "^27.0.6",
-		"jest-junit": "^12.2.0",
-		"node-fetch": "^2.6.1",
-		"release-it": "^14.10.0",
-		"rollup": "^2.52.8",
+		"fastify": "^3.22.0",
+		"jest": "^27.2.5",
+		"jest-junit": "^13.0.0",
+		"node-fetch": "^2.6.5",
+		"release-it": "^14.11.6",
+		"rollup": "^2.58.0",
 		"rollup-plugin-terser": "^7.0.2",
 		"rollup-plugin-typescript2": "^0.30.0",
-		"ts-jest": "^27.0.3",
-		"tslib": "^2.3.0",
-		"typescript": "^4.3.5"
+		"ts-jest": "^27.0.7",
+		"tslib": "^2.3.1",
+		"typescript": "^4.4.4"
 	},
 	"keywords": [
 		"rest",
@@ -58,6 +58,7 @@
 		"fetch",
 		"typescript",
 		"class",
-		"library"
+		"library",
+		"zero dependencies"
 	]
 }
