--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "scarlett",
-	"version": "0.16.5",
+	"version": "1.0.0-rc-1",
 	"description": "A strongly typed, Typescript powered, rest client library based on Fetch API.",
 	"browser": "lib/index.umd.js",
 	"module": "lib/index.js",
