--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,17 @@
 {
 	"compilerOptions": {
-		"noImplicitAny": false,
+		"strict": true,
+		"target": "ES2021",
 		"module": "ESNext",
-		"target": "ES2019",
+		"moduleResolution": "node",
+		"noImplicitAny": false,
 		"skipDefaultLibCheck": true,
 		"skipLibCheck": true,
-		"moduleResolution": "node",
 		"esModuleInterop": true,
-		"strict": true,
+		"sourceMap": true,
 		"resolveJsonModule": true,
-		"downlevelIteration": true,
 		"removeComments": true,
-		"lib": [ "ES2020" ]
+		"lib": [ "ES2021", "dom" ]
 	},
 	"paths": {
 		"@/*": [ "src/*" ]
