--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
 		"sourceMap": true,
 		"resolveJsonModule": true,
 		"removeComments": true,
-		"lib": [ "ES2021", "dom" ]
+		"lib": [ "ES2021", "dom" ],
+		"types": [ "jest" ]
 	},
 	"paths": {
 		"@/*": [ "src/*" ]
