--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
 	"scripts": {
 		"test": "jest",
 		"build": "rollup --config",
-		"build:es3": "rollup --config --es3",
-		"release": "dotenv release-it"
+		"build:es3": "rollup --config --es3"
 	},
 	"files": [
 		"lib/*.*"
 	],
+	"exports": {
+		".": "./lib/index.js"
+	},
 	"author": "Micene09 <giovanni.contino09@gmail.com>",
 	"license": "MIT",
 	"repository": {
@@ -32,12 +34,10 @@
 		"@types/node-fetch": "^2.5.12",
 		"abort-controller": "^3.0.0",
 		"babel-jest": "^27.3.1",
-		"dotenv-cli": "^4.1.0",
 		"fastify": "^3.24.0",
 		"jest": "^27.3.1",
 		"jest-junit": "^13.0.0",
 		"node-fetch": "^2.6.6",
-		"release-it": "^14.11.8",
 		"rollup": "^2.60.1",
 		"rollup-plugin-terser": "^7.0.2",
 		"rollup-plugin-typescript2": "^0.31.1",
