now just using manual run

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,12 @@
 name: build
 
 on:
-  push:
-    branches: [ develop ]
   workflow_dispatch:
     inputs:
       name:
         description: 'The manual run reason'
         required: false
-        default: 'Testing'
+        default: ''
 
 jobs:
   build:
