--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,7 @@ jobs:
       - run: yarn build
       - run: yarn build:es3
   publish:
+    if: ${{ success() }}
     runs-on: ubuntu-latest
     steps:
       - run: npm publish
