fixing ci workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: build
+name: ci
 
 on:
   workflow_dispatch:
@@ -23,6 +23,7 @@ jobs:
       - run: yarn build:es3
   test:
     if: ${{ success() }}
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - run: yarn test
