--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,7 @@ jobs:
       - run: yarn build:es3
   publish:
     if: ${{ success() }}
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - run: npm publish
