--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,5 @@ jobs:
       - run: yarn install --immutable
       - run: yarn build
       - run: yarn build:es3
+      - run: yarn build:es6
       - run: yarn test
