cleanup and conversion to vitest (wip)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
 		"resolveJsonModule": true,
 		"removeComments": true,
 		"lib": [ "ES2021", "dom" ],
-		"types": [ "jest" ]
+		"types": [ "node" ]
 	},
 	"paths": {
 		"@/*": [ "src/*" ]
