--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"module": "lib/index.js",
 	"types": "lib/index.d.ts",
 	"scripts": {
-		"test": "jest",
+		"test": "vitest run",
+		"test:watch": "vitest watch",
 		"build": "rollup --config",
 		"build:es3": "rollup --config --es3",
 		"build:es6": "rollup --config --es6"
@@ -24,26 +25,19 @@
 		"url": "git://github.com/Micene09/scarlett.git"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.16.7",
-		"@babel/preset-env": "^7.16.8",
-		"@babel/preset-typescript": "^7.16.7",
-		"@rollup/plugin-multi-entry": "^4.1.0",
-		"@rollup/plugin-node-resolve": "^13.1.3",
-		"@rollup/plugin-typescript": "^8.3.0",
-		"@types/jest": "^27.4.0",
-		"@types/node": "^17.0.9",
-		"@types/node-fetch": "^2.5.12",
+		"@rollup/plugin-node-resolve": "^13.3.0",
+		"@rollup/plugin-typescript": "^8.3.3",
+		"@types/node": "^17.0.45",
+		"@types/node-fetch": "^2.6.2",
 		"abort-controller": "^3.0.0",
-		"babel-jest": "^27.4.6",
-		"fastify": "^3.25.3",
-		"jest": "^27.4.7",
+		"fastify": "^3.29.0",
 		"node-fetch": "^2.6.7",
-		"rollup": "^2.64.0",
+		"rollup": "^2.75.7",
 		"rollup-plugin-terser": "^7.0.2",
-		"rollup-plugin-typescript2": "^0.31.1",
-		"ts-jest": "^27.1.3",
-		"tslib": "^2.3.1",
-		"typescript": "^4.5.4"
+		"rollup-plugin-typescript2": "^0.32.1",
+		"tslib": "^2.4.0",
+		"typescript": "^4.7.4",
+		"vitest": "^0.16.0"
 	},
 	"keywords": [
 		"rest",
