--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-	"typescript.tsdk": "node_modules\\typescript\\lib"
+	"typescript.tsdk": "node_modules\\typescript\\lib",
+	"vitest.enable": true,
+	"vitest.commandLine": "yarn test",
+	"vitest.include": [
+		"tests/*.test.ts"
+	]
 }
