--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
 	"typescript.tsdk": "node_modules\\typescript\\lib",
 	"vitest.enable": true,
-	"vitest.commandLine": "yarn test",
+	"vitest.commandLine": "yarn test-watch",
 	"vitest.include": [
 		"tests/*.test.ts"
 	]
