--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,8 +23,8 @@ jobs:
           cache: 'npm'
       - run: yarn install --immutable
       - run: yarn build
-      - run: yarn build:es3
-      - run: yarn build:es6
+      - run: yarn build-es3
+      - run: yarn build-es6
       - run: yarn test
       - run: npm publish
         env:
