--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "scarlett",
+	"type": "module",
 	"version": "1.4.1",
 	"description": "A strongly typed, Typescript powered, rest client library based on Fetch API.",
 	"browser": "lib/index.umd.js",
