--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,8 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  build_test:
+    name: build & test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
