chore: add pretty ts extension as recommended

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
 		"mhutchie.git-graph",
 		"eamodio.gitlens",
 		"zixuanchen.vitest-explorer",
-		"github.vscode-github-actions"
+		"github.vscode-github-actions",
+		"yoavbls.pretty-ts-errors"
 	]
 }
