--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,9 @@
 		"@/*": [ "src/*" ]
 	},
 	"include": [
+		"src/*.ts",
 		"src/**/*.ts",
-		"tests/**/*.ts"
+		"tests/*.ts"
 	],
 	"exclude": [ "node_modules" ]
 }
