--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,10 @@
 		"lib": [ "ES2021", "dom" ],
 		"types": [ "node" ]
 	},
+	"typedocOptions": {
+		"entryPoints": ["src/index.ts"],
+		"out": "docs"
+	},
 	"paths": {
 		"@/*": [ "src/*" ]
 	},
