--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"build": "rollup --config",
 		"build-es3": "rollup --config --es3",
 		"build-es6": "rollup --config --es6",
-		"doc": "typedoc",
+		"doc-build": "typedoc",
 		"bump": "bumpp"
 	},
 	"files": [
@@ -31,6 +31,7 @@
 		"url": "git://github.com/Micene09/scarlett.git"
 	},
 	"devDependencies": {
+		"@knodes/typedoc-plugin-pages": "^0.23.4",
 		"@rollup/plugin-node-resolve": "^15.0.2",
 		"@rollup/plugin-typescript": "^11.1.0",
 		"@types/node": "^20.1.1",
@@ -43,7 +44,7 @@
 		"rollup-plugin-terser": "^7.0.2",
 		"rollup-plugin-typescript2": "^0.34.1",
 		"tslib": "^2.5.0",
-		"typedoc": "^0.24.7",
+		"typedoc": "^0.23.0",
 		"typescript": "^5.0.4",
 		"vitest": "^0.31.0"
 	},
@@ -62,5 +63,8 @@
 		"library",
 		"zero dependencies"
 	],
-	"packageManager": "yarn@3.5.1"
+	"packageManager": "yarn@3.5.1",
+	"dependencies": {
+		"remove": "^0.1.5"
+	}
 }
