--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"build": "rollup --config",
 		"build-es3": "rollup --config --es3",
 		"build-es6": "rollup --config --es6",
-		"doc-build": "typedoc",
+		"doc-build-tsdoc": "typedoc",
 		"bump": "bumpp"
 	},
 	"files": [
@@ -31,7 +31,6 @@
 		"url": "git://github.com/Micene09/scarlett.git"
 	},
 	"devDependencies": {
-		"@knodes/typedoc-plugin-pages": "^0.23.4",
 		"@rollup/plugin-node-resolve": "^15.0.2",
 		"@rollup/plugin-typescript": "^11.1.0",
 		"@types/node": "^20.1.1",
@@ -44,7 +43,8 @@
 		"rollup-plugin-terser": "^7.0.2",
 		"rollup-plugin-typescript2": "^0.34.1",
 		"tslib": "^2.5.0",
-		"typedoc": "^0.23.0",
+		"typedoc": "^0.24.7",
+		"typedoc-plugin-markdown": "^3.15.3",
 		"typescript": "^5.0.4",
 		"vitest": "^0.31.0"
 	},
@@ -63,8 +63,5 @@
 		"library",
 		"zero dependencies"
 	],
-	"packageManager": "yarn@3.5.1",
-	"dependencies": {
-		"remove": "^0.1.5"
-	}
+	"packageManager": "yarn@3.5.1"
 }
