docs: add vitepress

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,12 @@
 		"tests/*.test.ts"
 	],
 	"cSpell.words": [
+		"bumpp",
 		"fastify",
+		"Micene",
 		"restoptions",
-		"scarlett"
+		"scarlett",
+		"tsdoc",
+		"vitepress"
 	]
 }
