--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "scarlett",
 	"type": "module",
 	"version": "2.0.0",
-	"description": "A strongly typed, Typescript powered, rest client library based on Fetch API.",
+	"description": "A strongly typed with zero dependencies, rest client library based on Fetch API.",
 	"browser": "lib/index.umd.js",
 	"module": "lib/index.js",
 	"types": "lib/index.d.ts",
@@ -13,6 +13,9 @@
 		"build-es3": "rollup --config --es3",
 		"build-es6": "rollup --config --es6",
 		"docs-build-tsdoc": "typedoc",
+		"docs-build": "vitepress build docs",
+		"docs-dev": "vitepress dev docs",
+		"docs-preview": "vitepress preview docs",
 		"bump": "bumpp"
 	},
 	"files": [
@@ -46,6 +49,7 @@
 		"typedoc": "^0.24.7",
 		"typedoc-plugin-markdown": "^3.15.3",
 		"typescript": "^5.0.4",
+		"vitepress": "^1.0.0-beta.1",
 		"vitest": "^0.31.0"
 	},
 	"keywords": [
