refactor: reason field name

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
     inputs:
       name:
-        description: 'Reason'
+        description: 'reason'
         required: false
         default: ''
 
