--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
 		"zixuanchen.vitest-explorer",
 		"github.vscode-github-actions",
 		"yoavbls.pretty-ts-errors",
-		"oouo-diogo-perdigao.docthis"
+		"oouo-diogo-perdigao.docthis",
+		"gruntfuggly.todo-tree"
 	]
 }
