chore: add exts

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,8 @@
 		"github.vscode-github-actions",
 		"yoavbls.pretty-ts-errors",
 		"oouo-diogo-perdigao.docthis",
-		"gruntfuggly.todo-tree"
+		"gruntfuggly.todo-tree",
+		"darkriszty.markdown-table-prettify",
+		"yzhang.markdown-all-in-one"
 	]
 }
