build: add readme and license to package

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
 		"bump": "bumpp"
 	},
 	"files": [
-		"lib/*.*"
+		"lib/*.*",
+		"readme.md",
+		"license"
 	],
 	"engines": {
 		"node": ">= 16.15 <19"
