--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"strict": true,
-		"target": "ES2021",
+		"target": "ESNext",
 		"module": "ESNext",
 		"moduleResolution": "node",
 		"noImplicitAny": true,
@@ -11,7 +11,7 @@
 		"sourceMap": true,
 		"resolveJsonModule": true,
 		"removeComments": true,
-		"lib": [ "ES2021", "dom" ],
+		"lib": [ "dom" ],
 		"types": [ "node" ]
 	},
 	"paths": {
