--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,12 @@ on:
     types: [created]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
+    inputs:
+      name:
+        description: 'reason'
+        required: false
+        default: ''
 
 jobs:
   build:
