ci: add default value on publish docs workflow reason field

--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -6,7 +6,7 @@ on:
       name:
         description: 'reason'
         required: false
-        default: ''
+        default: 'updates on contents'
 
 jobs:
   publish:
