--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -8,9 +8,21 @@ on:
         required: false
         default: 'updates on contents'
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
-  publish:
+  deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: /scarlett
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js v18.x
@@ -19,10 +31,14 @@ jobs:
           node-version: 'v18.x'
           registry-url: 'https://registry.npmjs.org'
           cache: 'npm'
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
       - run: yarn install
       - run: yarn docs-build
-      - name: publish
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: upload github pages artifact
+        uses: actions/upload-pages-artifact@v2
         with:
-          branch: gh-pages
-          folder: lib-docs
+          path: './lib-docs'
+      - name: publish
+        id: deployment
+        uses: actions/deploy-pages@v2
