--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -7,6 +7,9 @@ on:
         description: 'reason'
         required: false
         default: 'updates on contents'
+  push:
+    paths:
+      - docs/**
 
 jobs:
   build:
