--- a/package.json
+++ b/package.json
@@ -36,20 +36,20 @@
 		"url": "git://github.com/Micene09/scarlett.git"
 	},
 	"devDependencies": {
-		"@rollup/plugin-node-resolve": "^15.1.0",
+		"@rollup/plugin-node-resolve": "^15.2.1",
 		"@rollup/plugin-typescript": "^11.1.2",
-		"@types/node": "^20.4.0",
+		"@types/node": "^20.5.6",
 		"@types/node-fetch": "^2.6.4",
 		"@vitest/coverage-c8": "^0.33.0",
-		"bumpp": "^9.1.1",
-		"fastify": "^4.19.2",
-		"rollup": "^3.26.2",
+		"bumpp": "^9.2.0",
+		"fastify": "^4.21.0",
+		"rollup": "^3.28.1",
 		"rollup-plugin-terser": "^7.0.2",
 		"rollup-plugin-typescript2": "^0.35.0",
-		"tslib": "^2.6.0",
-		"typescript": "^5.1.6",
-		"vitepress": "^1.0.0-beta.5",
-		"vitest": "^0.33.0"
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2",
+		"vitepress": "^1.0.0-rc.4",
+		"vitest": "^0.34.3"
 	},
 	"keywords": [
 		"rest",
