build: publish doc path filter

--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -9,7 +9,8 @@ on:
         default: 'updates on contents'
   push:
     paths:
-      - docs/**
+      - '!*'
+      - 'docs/**'
 
 jobs:
   build:
