--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
 		"@types/node": "^20.6.5",
 		"@vitest/coverage-c8": "^0.33.0",
 		"bumpp": "^9.2.0",
-		"fastify": "^4.23.2",
+		"msw": "^2.0.12",
 		"rollup": "^3.29.3",
 		"rollup-plugin-terser": "^7.0.2",
 		"rollup-plugin-typescript2": "^0.35.0",
