--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,9 +1,9 @@
-nodeLinker: node-modules
+compressionLevel: mixed
 
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: "@yarnpkg/plugin-interactive-tools"
+enableGlobalCache: false
+
+nodeLinker: node-modules
 
 pnpFallbackMode: none
 
-yarnPath: .yarn/releases/yarn-3.5.1.cjs
+yarnPath: .yarn/releases/yarn-4.1.1.cjs
