--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         node-version: 'v18.x'
         registry-url: 'https://registry.npmjs.org'
-        cache: 'npm'
+        cache: 'yarn'
     - name: Setup Pages
       uses: actions/configure-pages@v3
     - run: yarn install
