--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: 'v18.x'
           registry-url: 'https://registry.npmjs.org'
-          cache: 'npm'
+          cache: 'yarn'
       - run: yarn install --immutable
       - run: yarn build
       - run: yarn build-es3
