--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -18,10 +18,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js v18.x
+    - name: Use Node.js v20.x
       uses: actions/setup-node@v3
       with:
-        node-version: 'v18.x'
+        node-version: '20.x'
         registry-url: 'https://registry.npmjs.org'
         cache: 'yarn'
     - name: Setup Pages
