build: trigger publish just on push to main branch

--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -8,6 +8,8 @@ on:
         required: false
         default: 'updates on contents'
   push:
+    branches:
+      - main
     paths:
       - '!*'
       - 'docs/**'
