--- a/.github/workflows/release-on-bump.yml
+++ b/.github/workflows/release-on-bump.yml
@@ -18,5 +18,5 @@ jobs:
               --repo="$GITHUB_REPOSITORY" \
               --title="$tag" \
               --generate-notes \
-              --draft
+              --draft \
               --verify-tag
