--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"test-watch": "vitest watch",
 		"coverage": "vitest run --coverage",
 		"build": "rollup --config",
+		"build-types": "tsc --project ./tsconfig.json --declaration --emitDeclarationOnly --outDir ./lib",
 		"build-es3": "rollup --config --es3",
 		"build-es6": "rollup --config --es6",
 		"docs-build": "vitepress build docs",
@@ -36,19 +37,19 @@
 		"url": "git://github.com/Micene09/scarlett.git"
 	},
 	"devDependencies": {
-		"@rollup/plugin-node-resolve": "^15.2.3",
-		"@rollup/plugin-typescript": "^11.1.6",
-		"@types/node": "^20.11.25",
+		"@rollup/plugin-node-resolve": "^16.0.0",
+		"@rollup/plugin-typescript": "^12.1.2",
+		"@types/node": "^22.10.5",
 		"@vitest/coverage-c8": "^0.33.0",
-		"bumpp": "^9.4.0",
-		"msw": "^2.2.3",
-		"rollup": "^4.12.1",
+		"bumpp": "^9.9.2",
+		"msw": "^2.7.0",
+		"rollup": "^4.29.2",
 		"rollup-plugin-terser": "^7.0.2",
 		"rollup-plugin-typescript2": "^0.36.0",
-		"tslib": "^2.6.2",
-		"typescript": "^5.4.2",
-		"vitepress": "^1.0.0-rc.45",
-		"vitest": "^1.3.1"
+		"tslib": "^2.8.1",
+		"typescript": "^5.7.2",
+		"vitepress": "^1.5.0",
+		"vitest": "^2.1.8"
 	},
 	"keywords": [
 		"rest",
