--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,7 @@ jobs:
           cache: 'yarn'
       - run: yarn install --immutable
       - run: yarn build
+      - run: yarn build-types
       - run: yarn build-es3
       - run: yarn build-es6
       - run: yarn test
