--- a/package.json
+++ b/package.json
@@ -39,13 +39,13 @@
 	},
 	"devDependencies": {
 		"@rollup/plugin-node-resolve": "^16.0.1",
+		"@rollup/plugin-terser": "^0.4.4",
 		"@rollup/plugin-typescript": "^12.1.2",
 		"@types/node": "^22.13.10",
-		"@vitest/coverage-c8": "^0.33.0",
+		"@vitest/coverage-v8": "^3.1.2",
 		"bumpp": "^9.11.1",
 		"msw": "^2.7.3",
 		"rollup": "^4.35.0",
-		"rollup-plugin-terser": "^7.0.2",
 		"rollup-plugin-typescript2": "^0.36.0",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.2",
